# hitalentTest

./: Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml
app/: config.py  main.py  prestart.sh
app/backend/: Base.py  async_database.py
app/models/: Answer.py  Question.py
app/routers/: answers.py  dependencies.py  questions.py
app/schemas/: __init__.py  answer.py  question.py
migrations/: env.py
migrations/versions/: 2025_11_16_1901-fc1e8b5bc967_initial.py  2025_11_17_1010-9ba8b19368ac_cascade_deletion_added.py
tests/: aiosqlite_stub.py  conftest.py  test_routers.py
